<resources>
    <string name="app_name">ProfessorPerformanceEvaluation</string>
    <string name="username_label">Nombre de usuario:</string>
    <string name="username_instruction_label">Ingresa tu nombre de usuario...</string>
    <string name="password_label">Contraseña:</string>
    <string name="password_instruction_label">Ingresa tu contraseña...</string>
    <string name="login_button">Iniciar sesión</string>
    <string name="sign_up_button">Crear cuenta</string>
    <string name="empty_fields_label">No se puede dejar ningún campo vacío.</string>
    <string name="invalid_data_label">Los datos ingresados son inválidos.</string>
    <string name="expired_session_label">La sesión ha expirado.</string>
    <string name="service_not_available_label">El servicio no está disponible.</string>
    <string name="professor_performance_evaluations_management_button">Gestión de evaluaciones al desempeño docente</string>
    <string name="educational_program_administration_button">Administración del programa educativo</string>
    <string name="student_management_button">Gestión de estudiantes</string>
    <string name="log_out_button">Cerrar sesión</string>
    <string name="query_educational_experience_button">Consultar experiencia educativa</string>
    <string name="query_professor_button">Consultar profesor</string>
    <string name="return_button">Regresar</string>
    <string name="log_professor_performance_evaluation_button">Registrar evaluación al desempeño docente</string>
    <string name="modify_professor_performance_evaluation_button">Editar evaluación al desempeño docente</string>
    <string name="query_student_button">Consultar estudiante</string>
    <string name="modify_student_button">Modificar estudiante</string>
    <string name="email_address_label">Correo electrónico:</string>
    <string name="email_address_instruction_label">Ingresa tu correo electrónico...</string>
    <string name="phone_number_label">Número de teléfono:</string>
    <string name="phone_number_instruction_label">Ingresa tu número de teléfono...</string>
    <string name="cancel_button">Cancelar</string>
    <string name="accept_button">Aceptar</string>
    <string name="student_already_registered_label">El estudiante ya se encuentra registrado en el sistema.</string>
    <string name="student_name">Nombre:</string>
    <string name="student_last_name">Apellidos:</string>
    <string name="student_email">Correo:</string>
    <string name="student_phone_number">Numero de telefono:</string>
    <string name="student_biography">Biografia:</string>
    <string name="student_profile">Perfil de usuario:</string>
    <string name="faculty_label">Facultad:</string>
    <string name="faculty_educational_program_instruction_label">Selecciona la facultad y el programa educativo al que perteneces. Asegúrate que la información seleccionada es correcta, ya que no podrá modificarse posteriormente.</string>
    <string name="educational_program_label">Programa educativo:</string>
    <string name="name_label">Nombre:</string>
    <string name="password_confirmation_label">Confirmación de contraseña:</string>
    <string name="last_name_label">Apellido(s):</string>
    <string name="name_instruction_label">Ingresa tu nombre...</string>
    <string name="last_name_instruction_label">Ingresa tu(s) apellido(s)...</string>
    <string name="password_confirmation_instruction_label">Ingresa tu confirmación de contraseña...</string>
    <string name="email_address_domain">estudiantes.uv.mx</string>
    <string name="user_already_registered">El usuario ya se encuentra registrado en el sistema.</string>
    <string name="registered_information_label">La información se registró correctamente en el sistema.</string>
    <string name="faculty_instruction_label">Selecciona tu facultad...</string>
    <string name="educational_program_instruction_label">Selecciona tu programa educativo</string>
    <string name="active_account_button">Activar cuenta</string>
    <string name="otp_instruction_label">Ingresa la contraseña de un solo uso (OTP) enviada a tu correo electrónico institucional y a tu número de teléfono.</string>
    <string name="registration_number_label">Matrícula:</string>
    <string name="registration_number_instruction_label">Ingresa tu matrícula...</string>
    <string name="otp_label">Contraseña de un solo uso (OTP):</string>
    <string name="modified_information_label">La información se modificó correctamente en el sistema.</string>
    <string name="welcome_label">Bienvenido.</string>
    <string name="rating_ratingbar">Calificacion</string>
    <string name="educational_experience_label">Experiencia educativa:</string>
    <string name="stars_label">Número de estrellas:</string>
    <string name="comment_label">Comentario:</string>
    <string name="school_period_label">Periodo escolar:</string>
    <string name="professor_label">Profesor:</string>
    <string name="student_label">Estudiante:</string>
    <string name="information_put_label">Información actualizada correctamente.</string>
    <string name="review_already_post_label">Ya se encuentra una reseña registrada con la misma información.</string>
    <string name="review_post_label">Se ha registrado correctamente en el sistema.</string>
    <string name="change_information_first_label">Realice cambios a la información primero.</string>
</resources>