<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="logStudentViewModel"
            type="com.example.professorperformanceevaluation.viewmodel.LogStudentViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".activity.LogStudentActivity">

        <TextView
            android:id="@+id/username_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/username_label"
            android:textColor="#616161"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/username_edit_text"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/username_text_view"
            android:layout_margin="16dp"
            android:autofillHints=""
            android:hint="@string/username_instruction_label"
            android:inputType="text"
            android:text="@={logStudentViewModel.username}"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/username_edit_text"
            android:text="@string/name_label"
            android:textColor="#616161"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/name_edit_text"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/name_text_view"
            android:layout_margin="16dp"
            android:autofillHints=""
            android:hint="@string/name_instruction_label"
            android:inputType="text"
            android:text="@={logStudentViewModel.name}"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/last_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/name_edit_text"
            android:hint="@string/last_name_instruction_label"
            android:text="@string/last_name_label"
            android:textColor="#616161"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/last_name_edit_text"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/last_name_text_view"
            android:layout_margin="16dp"
            android:autofillHints=""
            android:hint="@string/last_name_instruction_label"
            android:inputType="text"
            android:text="@={logStudentViewModel.lastName}"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/password_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/last_name_edit_text"
            android:text="@string/password_label"
            android:textColor="#616161"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/password_edit_text"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_text_view"
            android:layout_margin="16dp"
            android:autofillHints=""
            android:hint="@string/password_instruction_label"
            android:inputType="textPassword"
            android:text="@={logStudentViewModel.password}"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/password_confirmation_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_edit_text"
            android:text="@string/password_confirmation_label"
            android:textColor="#616161"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/password_confirmation_edit_text"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_confirmation_text_view"
            android:layout_margin="16dp"
            android:autofillHints=""
            android:hint="@string/password_confirmation_instruction_label"
            android:inputType="textPassword"
            android:text="@={logStudentViewModel.passwordConfirmation}"
            android:textSize="15sp" />

        <Button
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_confirmation_edit_text"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:onClick="@{() -> logStudentViewModel.onCancelButtonClick()}"
            android:text="@string/cancel_button" />

        <Button
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_confirmation_edit_text"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:onClick="@{() -> logStudentViewModel.onAcceptButtonClick()}"
            android:text="@string/accept_button" />

    </RelativeLayout>
</layout>