<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="logStudentEducationalProgramViewModel"
            type="com.example.professorperformanceevaluation.viewmodel.LogStudentEducationalProgramViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".activity.LogStudentEducationalProgramActivity">

        <TextView
            android:id="@+id/educational_program_instruction_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:hint="@string/educational_program_instruction_label"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/faculty_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/educational_program_instruction_text_view"
            android:hint="@string/faculty_label"
            android:layout_marginBottom="16dp"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/faculty_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/faculty_text_view"
            android:layout_marginTop="8dp"
            android:entries="@{logStudentEducationalProgramViewModel.faculties}" />

        <TextView
            android:id="@+id/educational_program_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/faculty_spinner"
            android:layout_marginBottom="16dp"
            android:hint="@string/educational_program_label"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/educational_program_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/educational_program_text_view"
            android:layout_marginTop="8dp"
            android:entries="@{logStudentEducationalProgramViewModel.educationalPrograms}" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/educational_program_spinner"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:onClick="@{() -> logStudentEducationalProgramViewModel.onCancelButtonClicked()}"
            android:text="@string/cancel_button" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/educational_program_spinner"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:onClick="@{() -> logStudentEducationalProgramViewModel.onAcceptButtonClicked()}"
            android:text="@string/accept_button" />

    </RelativeLayout>
</layout>